--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "ordered-merge-stream": "^0.0.0",
     "path": "^0.12.7",
     "underscore": "^1.8.3",
-    "underscore.string": "^3.2.2"
+    "underscore.string": "^3.2.2",
+    "gulp-angular-templatecache": "*"
   },
   "devDependencies": {},
 
-  "repository" : { 
-    "type": "git", 
+  "repository" : {
+    "type": "git",
     "url": "https://github.com/phidias-sas/phidias-gulp.git"
   },
 
