--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phidias-gulp",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Recurrent gulp tasks to build Phidias modules",
   "main": "phidias-gulp.js",
   "dependencies": {
@@ -15,7 +15,7 @@
     "path": "^0.12.7",
     "underscore": "^1.8.3",
     "underscore.string": "^3.2.2",
-    "gulp-angular-templatecache": "*"
+    "gulp-angular-templatecache": "1.9.1"
   },
   "devDependencies": {},
   "repository": {
